<resources>
    <string name="app_name">PaperPlane</string>
    <string name="sign_in">로그인</string>
    <string name="auto_agree">회원가입과 동시에 개인정보취급방침 및 이용약관에 동의하게됩니다</string>
    <string name="sign_up">회원가입</string>
    <string name="didnt_have_id">계정이 없으신가요?</string>
    <string name="enter_password">비밀번호</string>
    <string name="find_the_password">비밀번호 찾기</string>
    <string name="enter_email">이메일</string>
    <string name="enter_nick_name">이름</string>
    <string name="signup_failed">회원가입이 실패했습니다. 다시 시도해주세요.</string>
    <string name="already_have_id">이미 계정이 있습니다.</string>
    <string name="invalid_email">이메일 형식이 올바르지 않습니다.</string>
    <string name="invalid_nick_name">이름은 2글자 이상 8글자 이하로 만들어야 합니다.</string>
    <string name="invalid_password">비밀번호는 8자리 이상이어야 합니다.</string>
    <string name="plz_check_policy">개인정보 취급방침에 동의해야합니다.</string>
    <string name="existed_nick_name">이미 존재하는 이름입니다.</string>
    <string name="existed_email">이미 존재하는 이메일 입니다.</string>
    <string name="incorrect_password">비밀번호가 틀립니다.</string>
    <string name="not_existed_user">존재하지 않는 계정입니다.</string>
    <string name="plz_wait">잠시만 기다려주세요…</string>
    <string name="failed_upload">사진 업로드를 실패했습니다. 다시 시도해 주세요.</string>
    <string name="recruiting_team_member">팀원 모집하기</string>
    <string name="title">제목</string>
    <string name="category">게임</string>
    <string name="members">멤버</string>
    <string name="active_time">모집 종료시간</string>
    <string name="description">세부설명</string>
    <string name="options">옵션</string>
    <string name="select_game">게임선택</string>
    <string name="enter_contents">내용을 입력하세요</string>
    <string name="free_role">자유역할</string>
    <string name="add_member">멤버추가</string>
    <string name="team_member">팀원</string>
    <string name="select_role">역할선택</string>
    <string name="active_infinity">모집완료 시</string>
    <string name="add_tag">태그추가</string>
    <string name="select_tag">태그선택</string>
    <string name="confirm">완료</string>
    <string name="search_team">팀 찾기</string>
    <string name="sign_out">로그아웃</string>
    <string name="no_clan">아직 가입한 클랜이 없습니다</string>
    <string name="settings">환경설정</string>
    <string name="member_count">%1$d / %2$d</string>
    <string name="active_infinity_time">제한없음</string>
    <string name="active_time_finish_soon">마감임박</string>
    <string name="do_join">참가신청</string>
    <string name="team_info">팀 정보</string>
    <string name="comments">댓글</string>
    <string name="enter_comment">댓글 입력하기</string>
    <string name="send">전송</string>
    <string name="just_before">방금 전</string>
    <string name="min_before">%1$d분 전</string>
    <string name="hour_before">%1$d시간 전</string>
    <string name="need_member">필요한 팀원</string>
    <string name="contens_and_tag">내용 및 태그</string>
    <string name="need_member_count">%1$d명</string>
    <string name="total_need_member_count">총 %1$d명</string>
    <string name="recruit_status">팀 모집 현황</string>
    <string name="recruiting">모집 중</string>
    <string name="info">정보</string>
    <string name="remain_member_count">남은인원 %1$d명</string>
    <string name="joinable">참가신청 가능</string>
    <string name="joined_members">팀원</string>
    <string name="team">일반 팀</string>
    <string name="instant">즉석 팀</string>
    <string name="next">다음</string>
    <string name="enter_message">메세지 입력</string>
    <string name="find_chat_room">채팅방찾기</string>
    <string name="enter_title_or_tag">제목/태그로 검색</string>
    <string name="chat_room">내 그룹 채팅방</string>
    <string name="ask_select_game">게임을 선택해 주세요.</string>
    <string name="create_group_chat">그룹 채팅방 개설</string>
    <string name="enter_title">채팅방의 제목을 입력해주세요.</string>
    <string name="enter_contents_and_tag">채팅방을 소개할 문구를 적어주세요.\n#해쉬태그를 사용해서 홍보효과를 높여보세요.</string>
    <string name="soon_finish_and_set_options">거의 다 완료되었습니다.\n필요 시 아래 옵션들을 설정해보세요.</string>
    <string name="option_privacy">채팅방 공개</string>
    <string name="option_privacy_text">채팅방을 공개하지 않으면 설정하신 비밀번호를 입력한 후 채팅방에 입장하실 수 있습니다.</string>
    <string name="option_max_member_count">최대 인원 설정</string>
    <string name="option_max_member_count_text">채팅방에 입장할 수 있는 최대 인원수를 설정합니다.</string>
    <string name="add_popular_tag">인기태그 추가하기</string>
    <string name="join_group_chat">그룹 채팅방 참가</string>
    <string name="who_joined_chat">%1$s님이 채팅방에 입장하셨습니다.</string>
    <string name="out_of_chat">채팅방 나가기</string>
    <string name="out_of_chat_sub">채팅방을 나가시면 기록된 모든 대화는 삭제됩니다.</string>
    <string name="yes">확인</string>
    <string name="ok">확인</string>
    <string name="cancel">취소</string>
    <string name="who_out_of_chat">%1$s님이 채팅방을 나가셨습니다.</string>
    <string name="photo">사진</string>
    <string name="uploading_image">이미지 업로드중…</string>
    <string name="select_loc">위치 선택하기</string>
    <string name="search_chat">채팅방 찾기</string>
    <string name="select_loc_and_main_icon">채팅방의 위치와 아이콘을 선택해 주세요.</string>
    <string name="search_tag">해시태그 검색</string>
    <string name="no_search_result">검색결과 없음</string>
    <string name="hashtag_count">관련 채팅방 수 %1$s개</string>
    <string name="total_chat_count_is">총 %1$d개의 채팅방이 검색되었습니다.</string>
    <string name="event_list">이벤트 목록</string>
    <string name="searching">검색중…</string>
    <string name="people_interest_me">%1$s 님에게 호감을 표시한 사람이 있습니다.</string>
    <string name="where_is_my_lover">연인 찾기</string>
    <string name="start_introduce">소개받기</string>
    <string name="do_sign_up">새로운 계정 만들기</string>
    <string name="male">남자</string>
    <string name="location">지역</string>
    <string name="birth">출생년도</string>
    <string name="gender">성별</string>
    <string name="moreInfo">소개말</string>
    <string name="female">여자</string>
    <string name="age">나이</string>
    <string name="start">시작하기</string>
    <string name="do_login">로그인하기</string>
    <string name="plz_check_gender">성별을 선택해주세요</string>
    <string name="selected">지정됨</string>
    <string name="plz_check_location">지역을 지정해주세요</string>
    <string name="plz_check_age">나이를 지정해주세요</string>
    <string name="plz_check_moreInfo">소개말을 작성해주세요</string>
    <string name="plz_check_profile_img">프로필 사진을 설정해주세요</string>
    <string name="find_new_lover_title">관심 이성 찾기</string>
    <string name="find_new_lover_sub">새로운 이성을 소개받고\n관심을 표현해 보세요.\n서로가 서로에게 관심을 표현하면\n<font fgcolor='#f77f77'>[호감 확인하기]</font> 단계로\n넘어갈 수 있습니다.</string>
    <string name="response_btn_text">%1$s님 외 %2$s명이\n당신을 관심있어 합니다.\n관심에 호응해 보세요!</string>
    <string name="search_btn_text">새로운 인연을 찾습니다.\n행운을 빌어요!</string>
</resources>
