<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundDark">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/ripple_circle_button"
            android:padding="12dp"
            android:scaleType="centerInside"
            android:tint="@color/colorPrimaryDark"
            android:src="@drawable/ic_clear_black_48dp" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_width="280dp"
            android:layout_gravity="center">

            <ImageView
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher_round"
                android:id="@+id/imageView"
                android:adjustViewBounds="true"
                android:layout_gravity="center"
                android:layout_width="120dp"
                android:layout_marginBottom="50dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/enter_nick_name"
                android:ems="10"
                android:id="@+id/nameEdit"
                android:maxLength="20"
                android:maxLines="1"
                android:layout_marginBottom="10dp"
                android:textSize="@dimen/normal_text_size" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:hint="@string/enter_email"
                android:id="@+id/emailEdit"
                android:maxLines="1"
                android:layout_marginBottom="10dp"
                android:textSize="@dimen/normal_text_size" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:hint="@string/enter_password"
                android:id="@+id/passwordEdit"
                android:maxLines="1"
                android:textSize="@dimen/normal_text_size" />

            <LinearLayout
                android:id="@+id/policyLy"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_marginTop="10dp">

                <CheckBox
                    android:id="@+id/policyCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/policyText"
                    android:text="@string/auto_agree"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp" />

            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_marginTop="10dp"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"/>

            <Button
                android:id="@+id/signUpBtn"
                style="@style/PrimaryButton"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:text="@string/sign_up" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_gravity="bottom"
            android:background="@android:color/white"
            android:layout_height="45dp"
            android:elevation="5dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_gravity="center">

                <TextView
                    android:text="@string/already_have_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp" />

                <TextView
                    android:id="@+id/goSignInViewBtn"
                    android:text="@string/sign_in"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/colorPrimary" />

            </LinearLayout>

        </FrameLayout>

    </FrameLayout>

</layout>
