<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.design.widget.CoordinatorLayout
        android:background="@color/backgroundDark"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_marginTop="@dimen/contents_start_pos"
                android:layout_marginBottom="@dimen/contents_start_pos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginEnd="@dimen/normal_margin"
                android:background="@color/background">

                <LinearLayout
                    android:id="@+id/gameSelectBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/ripple_button"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/gameIconImg"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_margin="@dimen/normal_margin" />

                    <TextView
                        android:id="@+id/gameTitleText"
                        style="@style/TitleText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/backgroundDark"/>

                <EditText
                    android:id="@+id/titleInput"
                    android:layout_marginTop="@dimen/big_margin"
                    android:layout_marginStart="@dimen/normal_margin"
                    android:layout_marginEnd="@dimen/normal_margin"
                    android:layout_marginBottom="@dimen/big_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_title"
                    style="@style/TitleEditText"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/backgroundDark"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TitleText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:layout_margin="@dimen/normal_margin"
                        android:text="@string/active_time"
                        android:textColor="@color/disableText"/>

                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/activeTimeText"
                            style="@style/TitleText"
                            android:background="@drawable/ripple_button"
                            android:layout_gravity="center_vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/active_infinity" />

                        <View
                            android:layout_gravity="bottom"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/backgroundDark"/>

                    </FrameLayout>

                </LinearLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rolesRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false">
                </android.support.v7.widget.RecyclerView>

                <FrameLayout
                    android:layout_marginTop="@dimen/big_margin"
                    android:layout_marginBottom="@dimen/small_margin"
                    android:layout_marginLeft="@dimen/big_margin"
                    android:layout_marginRight="@dimen/big_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/SubText"
                            android:text="@string/members"/>

                        <TextView
                            android:id="@+id/memberSizeText"
                            android:layout_marginLeft="5dp"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            style="@style/SubText"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/addMemberBtn"
                        android:background="@color/colorPrimary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="6dp"
                        android:layout_gravity="end"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:src="@drawable/ic_add_black_48dp"
                            android:tint="@color/white" />

                        <TextView
                            style="@style/SubText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/add_member"
                            android:textColor="@color/white" />

                    </LinearLayout>

                </FrameLayout>

                <FrameLayout
                    android:layout_marginTop="@dimen/big_margin"
                    android:layout_marginBottom="@dimen/small_margin"
                    android:layout_marginLeft="@dimen/big_margin"
                    android:layout_marginRight="@dimen/big_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/SubText"
                            android:text="@string/description"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/addTagBtn"
                        android:background="@color/colorPrimary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="6dp"
                        android:layout_gravity="end"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:src="@drawable/ic_add_black_48dp"
                            android:tint="@color/white" />

                        <TextView
                            style="@style/SubText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/add_tag"
                            android:textColor="@color/white" />

                    </LinearLayout>

                </FrameLayout>

                <EditText
                    android:id="@+id/descriptionInput"
                    android:layout_marginLeft="@dimen/big_margin"
                    android:layout_marginRight="@dimen/big_margin"
                    android:layout_marginBottom="@dimen/big_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_description"
                    android:maxLines="100"
                    style="@style/NormalEditText"/>

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/top_menu_bar_height"
            android:background="@color/backgroundDarkAlpha">

            <TextView
                android:id="@+id/mainTopTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:includeFontPadding="false"
                android:text="@string/recruiting_team_member"
                android:textColor="@color/primaryText"
                android:textSize="@dimen/title_text_size" />

            <ImageButton
                android:id="@+id/backBtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/ripple_circle_button"
                android:padding="14dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_arrow_back_black_48dp"
                android:tint="@color/primaryText" />

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="end|center_vertical"
                android:background="@drawable/ripple_circle_button"
                android:padding="14dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_done_black_48dp"
                android:tint="@color/primaryText"
                android:visibility="gone"/>

        </FrameLayout>

        <TextView
            android:id="@+id/confirmBtn"
            android:layout_gravity="bottom"
            style="@style/FullButton"
            android:text="@string/confirm"/>

    </android.support.design.widget.CoordinatorLayout>

</layout>
